# comics-rust

./: .env  .gitignore  Cargo.toml  Makefile  Regex exemples  Todo  comics copy.sqlite  comics.sqlite  comics.toml  diesel.toml  index.html  shell copy.nix  shell.nix
archives/: name_parser.rs
archives/data_recovery/: unzip.rs
archives/entities/: book.rs  schema.rs  volume.rs
migrations/2022-10-30-141124_init/: down.sql  up.sql
migrations/2022-11-11-121419_modify-volume/: down.sql  up.sql
migrations/2022-11-11-193907_unique_issue_comic_vine_id/: down.sql  up.sql
migrations/2023-07-15-161456_create-cbr-status-table/: up.sql
migrations/2023-08-01-085151_update_archive_statuses/: up.sql
migrations/2023-08-02-084752_update_model/: up.sql
migrations/2023-11-26-084754_update_books_data_model/: up.sql
migrations/2023-11-26-113332_unique_path/: up.sql
migrations/2023-12-26-133704_comic_vine_id_and_image_urls/: up.sql
scripts/: unzip_all.rs
src/: api.rs  archives.rs  books.rs  comics_error.rs  config.rs  db.rs  diesel_helpers.rs  entities.rs  file_system.rs  lib.rs  main.rs  nas.rs  schema.rs  volumes.rs
src/actix/: archives.rs  mod.rs
src/api/: http_request.rs
src/comic_vine_sdk/: books.rs  mod.rs  volumes.rs
src/data_recovery/: find_archives.rs  mod.rs  parse_existing_dir.rs  remove_archives.rs  remove_ea_dirs.rs  rename.rs  structs.rs  unzip.rs  unzip_all.rs
src/data_recovery/parse/: mod.rs  parsable.rs
src/entities/: book.rs  book_issue.rs  creator.rs  issue.rs  mod.rs  repo.rs  schema.rs  volume.rs
src/entities/repo/: creator.rs  issue.rs  mod.rs  schema.rs
src/rest/: archives.rs  books.rs  mod.rs  volumes.rs
src/scripts/: mod.rs  remove_additional_directories.rs  unzip_all.rs
src/yew/: archives.rs  mod.rs
