[package]
	edition = "2021"
	name = "comics_rust"
	version = "0.1.0"

[dependencies]
	anyhow = "1"
	clap = { version = "4", features = ["derive", "cargo"] }
	diesel = { version = "2", features = ["chrono", "postgres"] }
	diesel-derive-enum = { git = "https://github.com/Ten0/diesel-derive-enum/", branch = "support_auto_queryid_derive", features = [
		"postgres",
	] }
	dotenv = "0.15"
	serde = "1"
	serde_derive = "1"
	walkdir = "2"
	zip = "0.6"
