[package]
	edition = "2021"
	name = "comics"
	version = "0.1.0"

[dependencies]
	diesel_helpers = { path = "../libs/diesel_helpers" }
	don_error = { path = "../libs/don_error" }
	# don_error = { git = "ssh://git@github.com/bebert64/libs_rust/tree/main/don_error" }

	actix-web = "4"
	clap = { version = "4", features = ["derive", "cargo"] }
	diesel = { git = "https://github.com/Ten0/diesel", branch = "for_stockly_main", features = [
		"postgres",
		"r2d2",
		"serde_json",
		"chrono",
	] }
	diesel-derive-enum = { git = "https://github.com/Ten0/diesel-derive-enum/", branch = "support_auto_queryid_derive", features = [
		"postgres",
	] }
	dotenv = "0.15"
	lazy_static = "1"
	regex = "1"
	serde = "1"
	serde_derive = "1"
	serde_json = "1"
	serde_qs = "0.12"
	walkdir = "2"
	zip = "0.6"
